force-app/main/default/objects/CJFW_ProfitReview__c/CJFW_ProfitReview__c.object-meta.xml
<CustomObject>
    <description>[P2] 수익성 검토페이지</description>
    <label>수익성검토</label>
    <nameField>
        <displayFormat>PR-{YYYYMMDD}-{0000}</displayFormat>
        <label>판매수익 이름</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>