force-app/main/default/objects/CJFW_ProfitReview__c/fields/CardFeeRate__c.field-meta.xml
<CustomField>
    <fullName>CardFeeRate__c</fullName>
    <label>카드 수수료율(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>