force-app/main/default/objects/CJFW_ProfitReview__c/fields/CollateralAmount__c.field-meta.xml
<CustomField>
    <fullName>CollateralAmount__c</fullName>
    <label>담보금액(백만)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>