force-app/main/default/objects/CJFW_ProfitReview__c/fields/CollateralType__c.field-meta.xml
<CustomField>
    <fullName>CollateralType__c</fullName>
    <label>담보유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>거래처별 담보현황</fullName>
            </value>
            <value>
                <fullName>담보현황 분석</fullName>
            </value>
            <value>
                <fullName>보증보험 담보현황</fullName>
            </value>
            <value>
                <fullName>연대보증 입보현황</fullName>
            </value>
            <value>
                <fullName>보증보험 감액/해지 모니터링</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>