force-app/main/default/objects/CJFW_ProfitReview__c/fields/ContractDepreciationRate__c.field-meta.xml
<CustomField>
    <fullName>ContractDepreciationRate__c</fullName>
    <label>약정감가율(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>