force-app/main/default/objects/CJFW_ProfitReview__c/fields/DistributionRate__c.field-meta.xml
<CustomField>
    <fullName>DistributionRate__c</fullName>
    <label>물류비율(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>