force-app/main/default/objects/CJFW_ProfitReview__c/fields/DonationRate__c.field-meta.xml
<CustomField>
    <fullName>DonationRate__c</fullName>
    <label>후원금(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>