force-app/main/default/objects/CJFW_ProfitReview__c/fields/ExpectContributionProfit__c.field-meta.xml
<CustomField>
    <fullName>ExpectContributionProfit__c</fullName>
    <label>예상 공헌이익</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>