force-app/main/default/objects/CJFW_ProfitReview__c/fields/ExpectContributionProfitRate__c.field-meta.xml
<CustomField>
    <fullName>ExpectContributionProfitRate__c</fullName>
    <label>예상 공헌이익률(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>