force-app/main/default/objects/CJFW_ProfitReview__c/fields/ExpectProfit__c.field-meta.xml
<CustomField>
    <fullName>ExpectProfit__c</fullName>
    <label>예상 매익</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>