force-app/main/default/objects/CJFW_ProfitReview__c/fields/ExpectSales__c.field-meta.xml
<CustomField>
    <fullName>ExpectSales__c</fullName>
    <label>예상 매출액(백만)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>