force-app/main/default/objects/CJFW_ProfitReview__c/fields/ExpectSalesProfit__c.field-meta.xml
<CustomField>
    <fullName>ExpectSalesProfit__c</fullName>
    <label>예상 영업이익</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>