force-app/main/default/objects/CJFW_ProfitReview__c/fields/ExpectSalesProfitRate__c.field-meta.xml
<CustomField>
    <fullName>ExpectSalesProfitRate__c</fullName>
    <label>예상 영업이익률(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>