force-app/main/default/objects/CJFW_ProfitReview__c/fields/FeeRate__c.field-meta.xml
<CustomField>
    <fullName>FeeRate__c</fullName>
    <label>수수료율(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>