force-app/main/default/objects/CJFW_ProfitReview__c/fields/GroupCommonRate__c.field-meta.xml
<CustomField>
    <fullName>GroupCommonRate__c</fullName>
    <label>그룹공통비(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>