force-app/main/default/objects/CJFW_ProfitReview__c/fields/IncentiveRate__c.field-meta.xml
<CustomField>
    <fullName>IncentiveRate__c</fullName>
    <label>장려금율(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>