force-app/main/default/objects/CJFW_ProfitReview__c/fields/IsDepositSales__c.field-meta.xml
<CustomField>
    <fullName>IsDepositSales__c</fullName>
    <label>보증금 영업여부</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>