force-app/main/default/objects/CJFW_ProfitReview__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>영업기회</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>수익성검토</relationshipLabel>
    <relationshipName>Profit_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>