force-app/main/default/objects/CJFW_ProfitReview__c/fields/OtherRate__c.field-meta.xml
<CustomField>
    <fullName>OtherRate__c</fullName>
    <label>기타(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>