force-app/main/default/objects/CJFW_ProfitReview__c/fields/OtherSupportRate__c.field-meta.xml
<CustomField>
    <fullName>OtherSupportRate__c</fullName>
    <label>기타지원율(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>