force-app/main/default/objects/CJFW_ProfitReview__c/fields/PayrollCostsRate__c.field-meta.xml
<CustomField>
    <fullName>PayrollCostsRate__c</fullName>
    <label>인건비율(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>