force-app/main/default/objects/CJFW_ProfitReview__c/fields/ResultExpectRate__c.field-meta.xml
<CustomField>
    <fullName>ResultExpectRate__c</fullName>
    <label>예상 매익률(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>