force-app/main/default/objects/CJFW_ProfitReview__c/fields/ResultExpectSales__c.field-meta.xml
<CustomField>
    <fullName>ResultExpectSales__c</fullName>
    <label>예상 매출</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>