force-app/main/default/objects/CJFW_ProfitReview__c/fields/SalesManageRate__c.field-meta.xml
<CustomField>
    <fullName>SalesManageRate__c</fullName>
    <label>판매관리 비율(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>