force-app/main/default/objects/CJFW_ProfitReview__c/fields/SupportFeeRate__c.field-meta.xml
<CustomField>
    <fullName>SupportFeeRate__c</fullName>
    <label>지원 수수료율(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>