force-app/main/default/objects/CJFW_ProfitReview__c/fields/SupportIssuesRate__c.field-meta.xml
<CustomField>
    <fullName>SupportIssuesRate__c</fullName>
    <label>지원사항율(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>